--- a/template/package.json
+++ b/template/package.json
@@ -82,6 +82,16 @@
     "nightwatch": "^0.9.12",
     "selenium-server": "^3.0.1",
     {{/e2e}}
+    "postcss-at-rules-variables": "^0.1.1",
+    "postcss-custom-properties": "^6.1.0",
+    "postcss-each": "^0.10.0",
+    "postcss-for": "^2.1.1",
+    "postcss-import": "^10.0.0",
+    "postcss-mixins": "^6.0.1",
+    "postcss-nested": "^2.0.2",
+    "postcss-short": "^4.1.0",
+    "postcss-short-color": "^3.0.0",
+    "postcss-simple-vars": "^4.0.0",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
     "opn": "^4.0.2",
